<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/OneOne"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/OneTwo"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/OneThree"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/OneFour"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/TwoOne"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/TwoTwo"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/TwoThree"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/TwoFour"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/ThreeOne"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/ThreeTwo"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/ThreeThree"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/ThreeFour"
            android:textColor="@color/white" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/FourOne"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="3"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/FourTwo"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/FourThree"
            android:textColor="@color/white" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="2dp"
            android:layout_weight="2"
            android:background="@color/blue"
            android:gravity="center"
            android:padding="20px"
            android:text="@string/FourFour"
            android:textColor="@color/white" />
    </LinearLayout>
</LinearLayout>